--- a/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/CustomerRoute/Templates/CustomerRouteGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/CustomerRoute/Templates/CustomerRouteGridTemplate.html
@@ -1,4 +1,4 @@
-﻿<div ng-show="showGrid">
+﻿<div ng-show="showGrid" vr-loader="isLoading">
     <vr-datagrid datasource="customerRoutes"
                  dataretrievalfunction="dataRetrievalFunction"
                  pagingtype="'PagingOnScroll'"
