Adding RecordFilter @AnalyticReportSettings
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44385

--- a/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/Definition/AnalyticReport/RealTime/Widgets/Templates/RealTimeWidgetsSelectiveTemplate.html
+++ b/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/Definition/AnalyticReport/RealTime/Widgets/Templates/RealTimeWidgetsSelectiveTemplate.html
@@ -13,7 +13,7 @@
 
             <vr-columns colnum="{{searchSettingsCtrl.normalColNum}}">
                 <vr-analytic-table-selector on-ready="scopeModel.onTableSelectorDirectiveReady" selectedvalues="scopeModel.selectedTable"
-                                            onselectitem="scopeModel.onSelectionTableChanged" isrequired="true" hideremoveicon>
+                                            onselectionchanged="scopeModel.onTableSelectorSelectionChanged" isrequired="true" hideremoveicon>
                 </vr-analytic-table-selector>
             </vr-columns>
 
