--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/Extensions/AccountManager/Templates/AccountManagerAccountManagerAssignmentGrid.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/Extensions/AccountManager/Templates/AccountManagerAccountManagerAssignmentGrid.html
@@ -1,5 +1,6 @@
 ﻿<vr-datagrid datasource="accountManagerAssignments"
              on-ready="onGridReady"
+             dataretrievalfunction="dataRetrievalFunction"
              pagingtype="'PagingOnScroll'"
              menuactions="gridMenuActions"
              enableautoexport="true">
