--- a/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/InvoiceSetting/Templates/InvoiceSettingGridTemplate.html
+++ b/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/InvoiceSetting/Templates/InvoiceSettingGridTemplate.html
@@ -14,7 +14,7 @@
     <vr-datagridcolumn headertext="'Default'" type="'Text'" field="'Entity.IsDefault'">
         <vr-icon icontype="dataItem.Entity.IsDefault"></vr-icon>
     </vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Due Period'" type="'Text'" field="'DuePeriodDescription'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Due Period (Days)'" type="'Text'" field="'DuePeriodDescription'"></vr-datagridcolumn>
     
     <vr-datagridexpandablerow>
         <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
